--- a/app/views/fullcalendar_engine/events/_edit_form.html.erb
+++ b/app/views/fullcalendar_engine/events/_edit_form.html.erb
@@ -1,39 +1,39 @@
 <%= form_for @event, :html => { :id => 'event_form' } do |f| %>
 <p>
-  <%=f.label :title %>
+  <%=f.label :title ,'Titulo'%>
   <br/>
   <%=f.text_field :title %>
 </p>
 <p>
-  <%=f.label :description %>
+  <%=f.label :description ,'Descrição'%>
   <br/>
   <%=f.text_area :description, :rows => 4, :cols => 30 %>
 </p>
 <p>
-  <%=f.label :starttime, 'Start Time' %>
+  <%=f.label :starttime, 'Inicio' %>
   <br/>
   <%=f.datetime_select :starttime %>
 </p>
 <p>
-  <%=f.label :endtime, 'End Time' %>
+  <%=f.label :endtime, 'Fim' %>
   <br/>
   <%=f.datetime_select :endtime %>
 </p>
 <p>
-  <%=f.label :all_day %>
+  <%=f.label :all_day ,'Dia todo?'%>
   <%=f.check_box :all_day %>
 </p>
 
 <%=f.hidden_field :commit_button, :value => ""%>
 <p>
   <%if @event.event_series -%>
-  <%=f.submit 'Update Only This Occurrence', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
-  <%=f.submit 'Update All Occurrence', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
-  <%=f.submit 'Update All Following Occurrence', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
+  <%=f.submit 'Atualize apenas esta ocorrência', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
+  <%=f.submit 'Atualize todas as ocorrências', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
+  <%=f.submit 'Atualize todas as seguintes', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
   <%else-%>
-  <%=f.submit 'Update', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
+  <%=f.submit 'Atualizar', :onclick => "document.getElementById('event_commit_button').value = this.value"%>
   <%end-%>
-  
-  <span id = "updating_events" class="spinner" style = "display:none;">Updating, Please wait...</span>
+
+  <span id = "updating_events" class="spinner" style = "display:none;">Atualizando, Por favor aguarde...</span>
 </p>
 <%end %>
