--- a/app/views/fullcalendar_engine/events/_form.html.erb
+++ b/app/views/fullcalendar_engine/events/_form.html.erb
@@ -1,37 +1,37 @@
 <%= form_for @event ||= FullcalendarEngine::Event.new, :html => { id: 'event_form' } do |f| %>
 <p>
-  <%=f.label :title %>
+  <%=f.label :title ,'Titulo'%>
   <br/>
   <%=f.text_field :title %>
 </p>
 <p>
-  <%=f.label :description %>
+  <%=f.label :description ,'Descrição'%>
   <br/>
   <%=f.text_area :description, :rows => 4, :cols => 30 %>
 </p>
 <p>
-  <%=f.label :starttime, 'Start Time' %>
+  <%=f.label :starttime, 'Inicio' %>
   <br/>
   <%=f.datetime_select :starttime %>
 </p>
 <p>
-  <%=f.label :endtime, 'End Time' %>
+  <%=f.label :endtime, 'Fim' %>
   <br/>
   <%=f.datetime_select :endtime %>
 </p>
 <p>
-  <%=f.label :all_day %>
+  <%=f.label :all_day ,"Dia todo?"%>
   <%=f.check_box :all_day %>
 </p>
 <p>
-  <%=f.label :period, "Repeats" %>
+  <%=f.label :period, "Repetir" %>
   <%=f.select :period, FullcalendarEngine::Event::REPEATS.values, {}, onchange: "FullcalendarEngine.Events.showPeriodAndFrequency(this.value);" %>
 </p>
 <p id = "frequency" style = "display:none;">
-  <%=f.label :frequency, "Repeat every" %>
+  <%=f.label :frequency, "Repetir toda" %>
   <%=f.select :frequency, (1..30).to_a %> <span id = "period"></span>
 </p>
 <p>
-  <%=f.submit %> <span id = "creating_events" class="spinner" style = "display:none;">Creating, Please wait...</span>
+  <%=f.submit %> <span id = "creating_events" class="spinner" style = "display:none;">Cadastrando, Aguarde...</span>
 </p>
 <%end %>
