--- a/app/views/fullcalendar_engine/events/index.html.erb
+++ b/app/views/fullcalendar_engine/events/index.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= link_to 'Create Event', 'javascript:void()', id: 'new_event' %>
+  <%= link_to 'Inserir Agenda', 'javascript:void()', id: 'new_event',:class=>'btn btn-primary' %>
 </p>
 <div>
   <div class='calendar'></div>
