corrigindo traducao faltante no javascript dos eventos recorrentes

--- a/app/assets/javascripts/fullcalendar_engine/events.js.erb
+++ b/app/assets/javascripts/fullcalendar_engine/events.js.erb
@@ -135,20 +135,20 @@ FullcalendarEngine = {
     },
     showPeriodAndFrequency: function(value){
       switch (value) {
-        case 'Daily':
-          $('#period').html('day');
+        case 'Diario':
+          $('#period').html('dia');
           $('#frequency').show();
           break;
-        case 'Weekly':
-          $('#period').html('week');
+        case 'Semanal':
+          $('#period').html('semana');
           $('#frequency').show();
           break;
-        case 'Monthly':
-          $('#period').html('month');
+        case 'Mensal':
+          $('#period').html('mes');
           $('#frequency').show();
           break;
-        case 'Yearly':
-          $('#period').html('year');
+        case 'Anual':
+          $('#period').html('ano');
           $('#frequency').show();
           break;
         default:
